--- a/AvanfittStore/css/paginaprincipal.css
+++ b/AvanfittStore/css/paginaprincipal.css
@@ -1,18 +1,14 @@
 html, body {
-    background: url('/Multimedia/fondo.jpg');
-    background-size: cover;
+    background: url('/Multimedia/fondo1.jpg');
+    background-color: #f8f9fa;
+    color: #343a40;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-repeat: no-repeat;
-    min-height: 100vh;
 }
 
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.form-group {
+    margin-bottom: 1.5rem;
+    position: relative;
 }
 
-@media (max-width: 506px) {
-    body {
-        background-attachment: scroll;}
-    }
